# todo-rs

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml
backend/migrations/: 20240610000000_create_tasks.sql  20240610000001_create_users.sql  20240612000000_add_indexes.sql  20240613000000_add_user_id_to_tasks.sql
backend/scripts/: create_admin.sh
backend/src/: auth.rs  database.rs  main.rs  models.rs  routes.rs
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: adminDataProvider.ts  authApi.ts  tasksApi.ts
frontend/src/components/: Admin.css  Admin.tsx  AdminLogin.tsx  Auth.css  Login.tsx  Register.tsx  TaskFilters.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.css  TaskList.tsx  TasksContainer.tsx  TestComponent.tsx
frontend/src/components/admin/: Dashboard.tsx  TaskEdit.tsx  TaskList.tsx  UserList.tsx
frontend/src/types/: task.types.ts
