[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
axum = { version = "0.8", features = ["tokio", "http1", "macros"] }
axum_csrf = { version = "0.11", features = ["layer"] }  
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
dotenv = "0.15"
validator = { version = "0.16", features = ["derive"] }
argon2 = "0.5"
jsonwebtoken = "9.0"